# proving-service

./: Cargo.toml  Dockerfile  README.md  cleanup.sh  deploy.sh  destroy.sh  hoc_toc_data.db  index.yaml  main.py  pcf_calculation_metrics.csv  pcf_pre_proof.json  proofing-service.yaml  proving-service.yaml  rust-toolchain.toml  setup.sh  start-all.sh
bpmn/: Case_1 Kopie.bpmn  Case_1.bpmn  Case_2 Kopie.bpmn  Case_2.bpmn  Case_3 Kopie.bpmn  Case_3.bpmn  camunda_forward.sh  tsp.bpmn
camunda-platform/: camunda-platform-core-kind-values.yaml
camunda-service/: Dockerfile
camunda-service/bpmn/: Origin.bpmn  tsp.bpmn
camunda-service/bpmn/data/: new_data_1.json  new_data_2.json  new_data_3.json
camunda-service/config/: database_config.py
camunda-service/k8s/: camunda_service.yaml
camunda-service/models/: product_footprint.py  proofing_document.py  sensor_data.py
camunda-service/services/service_implementations/: service_sensordata.py
camunda-service/tasks/: worker_tasks.py
charts/proving-service/: values.yaml
charts/proving-service/templates/: deployment.yaml
config/: settings.py
core/: Cargo.toml
core/src/: hoc_toc_data.rs  lib.rs  product_footprint.rs  proof_container.rs  proofing_document.rs  sensor_data.rs  sig_container.rs
helm-chart/: Chart.yaml
host/: Cargo.toml  docker-compose.yml  pcf_calculation_metrics.csv
host/json-examples/: signed_sensor_data.json  test-kafka.sh  test_3_1_0.json  test_3_1_1.json
host/src/: activity.json  benchmarking.rs  env_helper.rs  host_metrics.rs  json_file_test.json  main.rs  output.json  shipment.json  shipment_0.json  shipment_1.json  shipment_2_wo.json  shipment_3.json  sig_verifier.rs  test-kafka.sh
k8s/: camunda-service.yaml  create-topics-job.yaml  kafka-deployment.yaml  kafka-service.yaml  kafka-topic-job.yaml  kafka-values.yaml  proofing-deployment.yaml  proofing-service.yaml  proving-service.yaml  zookeeper-deployment.yaml
methods/guest/: Cargo.toml
methods/guest/src/: guest_metrics.rs  main.rs
metrics/: Cargo.toml
metrics/src/: lib.rs
metrics/src/metrics/: guest_metrics.rs  host_metrics.rs  mod.rs
models/: database.py  hoc_toc_data.py  sensor_data.py
pcf_aggregation/host/: Cargo.toml
pcf_aggregation/host/src/: main.rs  pcf_supply_proof.json
pcf_aggregation/methods/guest/: Cargo.toml
pcf_aggregation/methods/guest/src/: main.rs
pcf_calculation/: 37078de9-81cf-4f28-bc63-e5efea635935_host_metrics.csv  71a21b29-0fca-4a79-8dd1-7f581ca61a90_host_metrics.csv  Cargo.toml  b43e2286-02c3-417f-b163-ec2edd1f0fa9_host_metrics.csv  receipt_output.json
pcf_calculation/host/: Cargo.toml
pcf_calculation/host/src/: activity.json  main.rs  og.json  og2.json  sensor.json  sensor2.json  shipments.json  verify.rs
pcf_calculation/methods/: Cargo.toml
pcf_calculation/methods/guest/: Cargo.toml
pcf_calculation/methods/guest/src/: main.rs
pcf_calculation/methods/src/: lib.rs
pcf_calculation/metrics/: Cargo.toml
pcf_calculation/metrics/src/: lib.rs
pcf_calculation/metrics/src/metrics/: guest_metrics.rs  host_metrics.rs  mod.rs
proving-service/methods/guest/src/: main.rs
scripts/kind/: cleanup.sh  rollout.sh  setup.sh
scripts/minikube/: cleanup.sh  deploy.sh  setup.sh
services/: database.py
services/service_implementations/: service_sensordata.py
tasks/: worker_tasks.py
utils/: data_utils.py
