[package]
name = "guest_proofing_logic"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "^2.0.0", default-features = false, features = [
    'std',
] }
proving_service_core = { path = "../../core" }
const-oid = { version = "0.10", default-features = false }

serde = { version = "1.0", default-features = false, features = ["derive"] }
rsa = "0.9"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
pem = "1.0"
pkcs1 = "0.7"
serde_json = "1.0"
