[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^2.0.2", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex-literal = "0.3"
bincode = "1.3"
anyhow = "1.0"
hex = "0.4"
metrics = { path = "../metrics", default-features = false, features = ["risc0-zkvm", "serde", "csv", "postcard"] }