[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^2.0.2" }
#risc0-zkvm = { version = "2.0.2", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex-literal = "0.3"
bincode = "1.3"
anyhow = "1.0"
hex = "0.4"
csv = "1.3"
postcard = { version = "1.0", features = ["alloc"]}
uuid = { version = "1.8.0", features = ["v4"] }
rsa = "0.9"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
pem = "1.0"
pkcs1 = "0.7"
const-oid = "0.9"
digest = "0.10"
bytemuck = "1.23.1"


[target.'cfg(target_os = "linux")'.dependencies]
perf-event = { version = "0.4", optional = true }
