[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "^2.0.2", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false, optional = true } 
bincode = { version = "1.3", optional = true }
csv = { version = "1.3", optional = true }
postcard = { version = "1.0", features = ["alloc"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
perf-event = { version = "0.4", optional = true }
