[package]
name = "guest_pcf_calculation"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
#risc0-zkvm = { version = "^2.0.2", default-features = false, features = ['std'] }
risc0-zkvm = {  version = "2.0.2" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
csv = { version = "1.3", optional = true }
postcard = { version = "1.0", features = ["alloc"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
perf-event = { version = "0.4", optional = true }