[package]
name = "guest_code_for_zk_proof"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
#risc0-zkvm = {  version = "2.0.2", default-features = false, features = ["std"] }
risc0-zkvm = {  version = "2.0.2" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
rsa = "0.9"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
pem = "1.0"
pkcs1 = "0.7"
serde_json = "1.0"
const-oid = "0.9"
digest = "0.10"
bincode = { version = "1.3", optional = true }
csv = { version = "1.3", optional = true }
postcard = { version = "1.0", features = ["alloc"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
perf-event = { version = "0.4", optional = true }
